--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -13,8 +13,19 @@ body {
     flex-direction: column;
     height: 100vh;
     overflow-y: auto;
-    //overflow-y: hidden;
     -webkit-appearance: none;
+}
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    color: white;
+    width: auto;
+    height: auto;
+    padding: 4px;
+    font: 12px sans-serif;
+    background: #737373;
+    border: 0px;
+    border-radius: 2px;
 }
 div.block-infos {
     display: flex;
@@ -42,8 +53,7 @@ div.query-answer {
 #query-card-container {
     overflow: auto;
     outline: 1px solid var(--selected-colour);
-    //cursor: grab;
-    padding:0 10px;
+    padding: 0 10px;
 }
 
 #query-card-container > .uk-card {
@@ -70,7 +80,6 @@ div.query-answer {
 }
 
 #query-header > div {
-    //padding-left: 2%;
     font-weight: 700;
     color: #666;
     font-size: 1.3em;
@@ -93,18 +102,18 @@ div.query-answer {
 .transaction-title {
     font-family: monospace;
     color: #666;
-    font-size: 1.0em;
+    font-size: 1em;
 }
 
 .download-icon-1 {
     display: inline-block;
     padding-left: 2px;
     float: right;
-    svg{
-        width:30px;
+    svg {
+        width: 30px;
         height: 30px;
         cursor: default;
-        path{
+        path {
             stroke: #666;
         }
 
@@ -115,14 +124,14 @@ div.query-answer {
     }
 }
 
-.download-icon-2{
-    display:inline-block;
+.download-icon-2 {
+    display: inline-block;
     padding-left: 400;
-    svg{
-        width:25px;
+    svg {
+        width: 25px;
         height: 25px;
         cursor: default;
-        path{
+        path {
             stroke: #666;
         }
 
@@ -133,14 +142,12 @@ div.query-answer {
     }
 }
 
-.search-button{
+.search-button {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-right: 50px;
 }
-
-//
 
 /* Used to transform black SVGs to white SVGs, as well as displaying them inline*/
 .white-icon {
@@ -184,7 +191,6 @@ div.query-answer {
 .topnav a[type="submit"] {
     padding-top: 10px;
     background: white;
-    //margin-right: 35%;
     margin-top: 8px;
     margin-bottom: 8px;
     color: grey;
@@ -322,8 +328,8 @@ div.query-answer {
 .mover {
     fill: grey;
     height: 6px;
-    pointer-events:all;
-    cursor:pointer;
+    pointer-events: all;
+    cursor: pointer;
 }
 
 #last-container {
@@ -362,7 +368,7 @@ div.query-answer {
     margin: 40px;
 }
 
-#status-div{
+#status-div {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -370,20 +376,19 @@ div.query-answer {
 
 #node-table {
     width: 400px;
-    
 }
 
 .chart-badge {
-    position:relative;
+    position: relative;
     box-sizing: border-box;
-    min-width: 22px;    
+    min-width: 22px;
     height: 22px;
     padding: 0 5px;
     border-radius: 500px;
     vertical-align: middle;
     background: #1749b3;
     color: #fff;
-    font-size: .875rem;
+    font-size: 0.875rem;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -401,16 +406,14 @@ div.query-answer {
     font-size: small;
 }
 
-
 //zoom-in & out button
 .dropdown {
-    position:relative;
+    position: relative;
     right: 81%;
     top: 20px;
     width: 25px;
     height: 25px;
     border: 1px solid gray;
-    
 }
 .dropdown:hover {
     border-color: #006fff;
@@ -420,31 +423,29 @@ div.query-answer {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color:white;
+    background-color: white;
     border: none;
     cursor: pointer;
 }
 
-
 #svg-zoombtn {
     width: 30px;
     height: 30px;
-    max-width:none;
-
+    max-width: none;
 }
 
-.dropdown-zoom{
-    position:relative;
-    display:inline-block;
+.dropdown-zoom {
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-zoom-content {
-    display:none;
+    display: none;
     position: absolute;
     top: 30px;
     left: 10px;
     background-color: #ffffff;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     cursor: pointer;
 }
@@ -454,10 +455,12 @@ div.query-answer {
     width: max-content;
 }
 .dropdown-zoom-content p:hover {
-    color:#006fff;
+    color: #006fff;
 }
 
-.show {display: block;}
+.show {
+    display: block;
+}
 
 #svg-container {
     display: flex;
@@ -585,20 +588,19 @@ div.query-answer {
 }
 
 .search-value {
-    width: 30%;  
+    width: 30%;
 }
 
-.search-text{
+.search-text {
     font-weight: 900;
 }
-
 
 #button-browse {
     padding: 8px;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 100%;       
+    width: 100%;
     border-width: 2px;
 }
 
@@ -633,10 +635,6 @@ List of classes for the new transaction container
     outline: 2px solid var(--selected-colour);
 }
 
-// #block-detail-field {
-//     font-family: "Space Mono", monospace;
-//     color: #ffffff;
-// }
 .uk-accordion > .uk-open {
     background-color: var(--selected-colour);
 }
@@ -657,9 +655,9 @@ List of classes for the new transaction container
 
 .uk-accordion * {
     color: #ffffff;
-    //added
+
     .search-value {
-        color : black;
+        color: black;
     }
 }
 
@@ -774,13 +772,12 @@ List of classes for the new transaction container
 }
 
 #select-roster {
-    background:rgba(0,0,0,0.5); //darken background to overwrite .uk-open background-color 
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .uk-button-small {
     width: 110px;
 }
-
 
 .x-axis {
     text-anchor: start;
@@ -798,28 +795,31 @@ List of classes for the new transaction container
     }
 }
 
-#svg-spinner{
+#svg-spinner {
     -webkit-transition-property: -webkit-transform;
     -webkit-transition-duration: 1.2s;
     -webkit-animation-name: rotate;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
-    
+
     -moz-transition-property: -moz-transform;
-    -moz-animation-name: rotate; 
-    -moz-animation-duration: 1.2s; 
+    -moz-animation-name: rotate;
+    -moz-animation-duration: 1.2s;
     -moz-animation-iteration-count: infinite;
     -moz-animation-timing-function: linear;
-    
+
     transition-property: transform;
-    animation-name: rotate; 
-    animation-duration: 1.2s; 
+    animation-name: rotate;
+    animation-duration: 1.2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-  }
-  
-  @keyframes rotate {
-      from {transform: rotate(0deg);}
-      to {transform: rotate(360deg);}
-  }
-  
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
